//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.system.server;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option (internal_all) = true;

option java_package = "io.spine.system.server";
option java_outer_classname = "HistoryCommandsProto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

import "spine/core/event.proto";
import "spine/core/command.proto";
import "spine/system/server/entity_history.proto";

message CreateEntity {

    EntityHistoryId id = 1 [(required) = true];

    EntityOption.Kind kind = 2 [(required) = true];
}

message DispatchEventToSubscriber {

    EntityHistoryId receiver = 1 [(required) = true];

    spine.core.EventId event_id = 2 [(required) = true, (valid) = true];
}

message DispatchEventToReactor {

    EntityHistoryId receiver = 1 [(required) = true];

    spine.core.EventId event_id = 2 [(required) = true, (valid) = true];
}

message DispatchEventToApplier {

    EntityHistoryId receiver = 1 [(required) = true];

    spine.core.EventId event_id = 2 [(required) = true, (valid) = true];
}

message DispatchCommandToHandler {

    EntityHistoryId receiver = 1 [(required) = true];

    spine.core.CommandId command_id = 2 [(required) = true, (valid) = true];
}

message ChangeEntityState {

    EntityHistoryId id = 1 [(required) = true];

    google.protobuf.Any new_state = 2 [(required) = true];

    // TODO:2018-07-09:dmytro.dashenkov: Make required as soon as Procman is completely transactional.
    repeated DispatchedMessageId message_id = 3;
}

message ArchiveEntity {

    EntityHistoryId id = 1 [(required) = true];

    repeated DispatchedMessageId message_id = 2;
}

message DeleteEntity {

    EntityHistoryId id = 1 [(required) = true];

    repeated DispatchedMessageId message_id = 2;
}

message ExtractEntityFromArchive {

    EntityHistoryId id = 1 [(required) = true];

    repeated DispatchedMessageId message_id = 2;
}

message RestoreEntity {

    EntityHistoryId id = 1 [(required) = true];

    repeated DispatchedMessageId message_id = 2;
}
